Show category for top k suggestions